[gd_scene format=3 uid="uid://d2nwnuqqil3f0"]

[ext_resource type="Script" uid="uid://bnrgsw5bu3p6j" path="res://scripts/game.gd" id="1_lnu2h"]
[ext_resource type="PackedScene" uid="uid://qee546yqe1ne" path="res://scenes/player.tscn" id="1_uwrxv"]
[ext_resource type="Texture2D" uid="uid://g0xlorw6vj8g" path="res://assets/plane_pack/sky_background/example/sky_background_green_hills.png" id="1_yqjtg"]
[ext_resource type="PackedScene" uid="uid://ceq6rslseh62j" path="res://scenes/pipe.tscn" id="5_iywne"]
[ext_resource type="PackedScene" uid="uid://dhu8p3ftdx3wo" path="res://scenes/ground.tscn" id="6_p57ef"]
[ext_resource type="PackedScene" uid="uid://b3nmbkfa4f8sp" path="res://scenes/cheat_code_menu.tscn" id="7_dinhu"]
[ext_resource type="PackedScene" uid="uid://bemfcfq10ud1f" path="res://scenes/coin.tscn" id="7_u5sy4"]
[ext_resource type="PackedScene" uid="uid://btvo7t7jdda1m" path="res://scenes/refueling_station.tscn" id="8_gee14"]
[ext_resource type="PackedScene" uid="uid://cye2twaxip8lf" path="res://scenes/torpedo.tscn" id="8_trtic"]
[ext_resource type="PackedScene" uid="uid://tv1so81v08fi" path="res://scenes/refueling_menu.tscn" id="9_0tnpc"]
[ext_resource type="Script" uid="uid://d34yuumxrwwm5" path="res://scripts/player.gd" id="9_kvpfn"]
[ext_resource type="PackedScene" uid="uid://b6sttng1yxfx7" path="res://scenes/game_stats.tscn" id="10_vtaks"]
[ext_resource type="PackedScene" uid="uid://dlhmbm8et6p6h" path="res://scenes/you_died.tscn" id="11_kvpfn"]
[ext_resource type="FontFile" uid="uid://byrn6tqmul438" path="res://fonts/Zen_Dots/ZenDots-Regular.ttf" id="13_kvuet"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_lbhrr"]
distance = -662.0

[node name="Game" type="Node2D" unique_id=878502610]
script = ExtResource("1_lnu2h")
pipe_scene = ExtResource("5_iywne")
coin_scene = ExtResource("7_u5sy4")
station_scene = ExtResource("8_gee14")
refueling_menu_scene = ExtResource("9_0tnpc")
death_message_scene = ExtResource("11_kvpfn")
cheat_code_menu_scene = ExtResource("7_dinhu")
torpedo_scene = ExtResource("8_trtic")

[node name="Background" type="Sprite2D" parent="." unique_id=302017982]
position = Vector2(578, 236.00003)
scale = Vector2(0.4116086, 0.42854822)
texture = ExtResource("1_yqjtg")

[node name="Player" parent="." unique_id=1205252902 instance=ExtResource("1_uwrxv")]
z_index = 1
position = Vector2(313, 200)
script = ExtResource("9_kvpfn")

[node name="Camera2D" type="Camera2D" parent="." unique_id=1591193315]
position = Vector2(576, 339)

[node name="StaticBody2D2" type="StaticBody2D" parent="." unique_id=1976685063]
position = Vector2(63, 680)
rotation = 3.1415927

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2" unique_id=825844051]
shape = SubResource("WorldBoundaryShape2D_lbhrr")

[node name="StaticBody2D" type="StaticBody2D" parent="." unique_id=305991642]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D" unique_id=2012313007]
position = Vector2(64, -105)
shape = SubResource("WorldBoundaryShape2D_lbhrr")

[node name="Pipe" parent="." unique_id=1023957667 instance=ExtResource("5_iywne")]
visible = false
position = Vector2(1013, 374)

[node name="Ground" parent="." unique_id=125041779 instance=ExtResource("6_p57ef")]
z_index = 3
position = Vector2(-21, 10)

[node name="PlaneTrail" type="Line2D" parent="." unique_id=1698368031]
z_index = 1
width = 4.0
antialiased = true

[node name="PipeTimer" type="Timer" parent="." unique_id=534063136]
wait_time = 2.4
autostart = true

[node name="Coin" parent="." unique_id=676235169 instance=ExtResource("7_u5sy4")]
visible = false
position = Vector2(498, 260)

[node name="CoinTimer" type="Timer" parent="." unique_id=1778920548]
wait_time = 5.0
autostart = true

[node name="GameStats" parent="." unique_id=1844123834 instance=ExtResource("10_vtaks")]
z_index = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
offset_left = -7.0
offset_top = 578.0
offset_right = -7.0
offset_bottom = 578.0
grow_vertical = 0

[node name="CheatCodeMenu" parent="." unique_id=1177656868 instance=ExtResource("7_dinhu")]
visible = false
z_index = 3
offset_top = 290.0
offset_bottom = 290.0

[node name="GamePausedLabel" type="Label" parent="." unique_id=1169055559]
z_index = 3
offset_left = 387.0
offset_top = 554.0
offset_right = 701.0
offset_bottom = 579.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_constants/outline_size = 18
theme_override_fonts/font = ExtResource("13_kvuet")
text = "Press SPACE or X to Resume Game"

[node name="TorpedoTimer" type="Timer" parent="." unique_id=981358351]
autostart = true

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="refueling_finalized" from="." to="Player" method="_on_game_refueling_finalized"]
[connection signal="start" from="." to="Player" method="_on_game_start"]
[connection signal="died" from="Player" to="." method="_on_player_died"]
[connection signal="area_entered" from="Pipe" to="Player" method="_on_pipe_area_entered"]
[connection signal="hit" from="Pipe" to="Player" method="_on_pipe_hit"]
[connection signal="mouse_entered" from="Pipe" to="Player" method="_on_pipe_mouse_entered"]
[connection signal="body_entered" from="Ground" to="Player" method="_on_ground_body_entered"]
[connection signal="timeout" from="PipeTimer" to="." method="_on_pipe_timer_timeout"]
[connection signal="timeout" from="CoinTimer" to="." method="_on_coin_timer_timeout"]
[connection signal="timeout" from="TorpedoTimer" to="." method="_on_torpedo_timer_timeout"]
